--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Hello UIUC RNA Club!</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>UIUC RNA Club | Home</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="nav.js"></script>
+</head>
+<body>
+  <header class="header">
+    <div class="brand">UIUC RNA Club</div>
+
+    <nav class="nav">
+      <select id="navSelect" data-current="index.html" aria-label="Site navigation">
+        <option value="index.html">Home</option>
+        <option value="events.html">Event</option>
+        <option value="committee.html">Committee</option>
+        <option value="join.html">Join us!</option>
+      </select>
+    </nav>
+  </header>
+
+  <main class="center-hero">
+    <!-- requirement #3 -->
+    Welcome to UIUC RNA Club!
+  </main>
+</body>
+</html>
