Added description to home page.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,33 @@
       <h1 class="hero-title">Welcome to UIUC RNA Club!</h1>
       <div class="hero-accent" aria-hidden="true"></div>
       <p class="hero-subtitle">
-        A student-led community at the University of Illinois Urbana-Champaign for people who are curious about RNA biology,
-        technologies, and applications—through seminars, workshops, and networking.
+        We connect RNA researchers across disciplines at the University of Illinois Urbana-Champaign to promote innovation
+        and collaboration in RNA sciences.
       </p>
       <div class="hero-actions">
         <a class="btn btn-primary" href="events.html">See upcoming events</a>
         <a class="btn btn-secondary" href="join.html">Join us</a>
+      </div>
+      <div class="hero-grid">
+        <div class="hero-panel">
+          <h2 class="kicker">About the club</h2>
+          <p class="p">Welcome to the RNA Club at the University of Illinois Urbana-Champaign!</p>
+          <p class="p">
+            Building on U of I’s outstanding research history, including Prof. Carl Woese’s seminal discovery of the third
+            domain of life, we connect RNA researchers across disciplines to promote innovation and collaboration in RNA
+            sciences.
+          </p>
+        </div>
+
+        <div class="hero-panel hero-panel--accent">
+          <h2 class="kicker">Club activities</h2>
+          <ul class="activity-list">
+            <li>Research seminars with junior researchers</li>
+            <li>Workshops on RNA-focused techniques</li>
+            <li>Professional development sessions</li>
+            <li>Annual mini-symposium</li>
+          </ul>
+        </div>
       </div>
     </section>
   </main>
