--- a/index.html
+++ b/index.html
@@ -21,40 +21,34 @@
     </nav>
   </header>
 
-  <main class="center-hero">
-    <section class="hero-card">
-      <h1 class="hero-title">Welcome to UIUC RNA Club!</h1>
-      <div class="hero-accent" aria-hidden="true"></div>
-      <p class="hero-subtitle">
-        We connect RNA researchers across disciplines at the University of Illinois Urbana-Champaign to promote innovation
-        and collaboration in RNA sciences.
-      </p>
-      <div class="hero-actions">
-        <a class="btn btn-primary" href="events.html">See upcoming events</a>
-        <a class="btn btn-secondary" href="join.html">Join us</a>
-      </div>
-      <div class="hero-grid">
-        <div class="hero-panel">
-          <h2 class="kicker">About the club</h2>
-          <p class="p">Welcome to the RNA Club at the University of Illinois Urbana-Champaign!</p>
-          <p class="p">
-            Building on U of I’s outstanding research history, including Prof. Carl Woese’s seminal discovery of the third
-            domain of life, we connect RNA researchers across disciplines to promote innovation and collaboration in RNA
-            sciences.
-          </p>
-        </div>
+  <main class="home">
+    <h1 class="title">Welcome to UIUC RNA Club!</h1>
 
-        <div class="hero-panel hero-panel--accent">
-          <h2 class="kicker">Club activities</h2>
-          <ul class="activity-list">
-            <li>Research seminars with junior researchers</li>
-            <li>Workshops on RNA-focused techniques</li>
-            <li>Professional development sessions</li>
-            <li>Annual mini-symposium</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+    <p class="body">
+      We connect RNA researchers across disciplines at the University of Illinois Urbana-Champaign to promote innovation
+      and collaboration in RNA sciences.
+    </p>
+
+    <h2 class="title">About the club</h2>
+    <p class="body">Welcome to the RNA Club at the University of Illinois Urbana-Champaign!</p>
+    <p class="body">
+      Building on U of I’s outstanding research history, including Prof. Carl Woese’s seminal discovery of the third
+      domain of life, we connect RNA researchers across disciplines to promote innovation and collaboration in RNA
+      sciences.
+    </p>
+
+    <h2 class="title">Club activities</h2>
+    <ul class="list">
+      <li>Research seminars with junior researchers</li>
+      <li>Workshops on RNA-focused techniques</li>
+      <li>Professional development sessions</li>
+      <li>Annual mini-symposium</li>
+    </ul>
+
+    <div class="actions">
+      <a class="btn btn-primary" href="events.html">See upcoming events</a>
+      <a class="btn btn-secondary" href="join.html">Join us</a>
+    </div>
   </main>
 </body>
 </html>
