removed redundant text in home page

--- a/index.html
+++ b/index.html
@@ -26,25 +26,11 @@
 
     <p class="body">
       We connect RNA researchers across disciplines at the University of Illinois Urbana-Champaign to promote innovation
+      and collaboration in RNA sciences. Building on U of I’s outstanding research history, including Prof. Carl Woese’s 
+      seminal discovery of the third domain of life, we connect RNA researchers across disciplines to promote innovation 
       and collaboration in RNA sciences.
     </p>
-
-    <h2 class="title">About the club</h2>
-    <p class="body">Welcome to the RNA Club at the University of Illinois Urbana-Champaign!</p>
-    <p class="body">
-      Building on U of I’s outstanding research history, including Prof. Carl Woese’s seminal discovery of the third
-      domain of life, we connect RNA researchers across disciplines to promote innovation and collaboration in RNA
-      sciences.
-    </p>
-
-    <h2 class="title">Club activities</h2>
-    <ul class="list">
-      <li>Research seminars with junior researchers</li>
-      <li>Workshops on RNA-focused techniques</li>
-      <li>Professional development sessions</li>
-      <li>Annual mini-symposium</li>
-    </ul>
-
+    
     <div class="actions">
       <a class="btn btn-primary" href="events.html">See upcoming events</a>
       <a class="btn btn-secondary" href="join.html">Join us</a>
