Added committee photo

--- a/committee.html
+++ b/committee.html
@@ -26,26 +26,34 @@
     <!-- requirement #5 -->
     <section class="grid">
       <article class="card">
-        <img src="assets/committee-placeholder.png" alt="Committee member photo" />
+        <img src="assets/hongjin.png" alt="Committee member photo" />
         <div class="card-body">
-          <div class="name">Name 1</div>
-          <div class="role">Role / Department</div>
+          <div class="name">Hong Jin</div>
+          <div class="role">Associate Professor / Biochemistry</div>
         </div>
       </article>
 
       <article class="card">
-        <img src="assets/committee-placeholder.png" alt="Committee member photo" />
+        <img src="assets/Kalsotra,Auinash.png" alt="Committee member photo" />
         <div class="card-body">
-          <div class="name">Name 2</div>
-          <div class="role">Role / Department</div>
+          <div class="name">Nash Kalsotra</div>
+          <div class="role">Phillip A. Sharp Endowed Professor / Biochemistry</div>
         </div>
       </article>
 
       <article class="card">
-        <img src="assets/committee-placeholder.png" alt="Committee member photo" />
+        <img src="assets/YanZhang_photo.png" alt="Committee member photo" />
         <div class="card-body">
-          <div class="name">Name 3</div>
-          <div class="role">Role / Department</div>
+          <div class="name">Yan Zhang</div>
+          <div class="role">Assistant Professor / Biochemistry</div>
+        </div>
+      </article>
+
+      <article class="card"></article>
+        <img src="assets/Boxuan Zhao cropped.png" alt="Committee member photo" />
+        <div class="card-body">
+          <div class="name">Boxuan Zhao</div>
+          <div class="role">Assistant Professor / Cell and Developmental Biology</div>
         </div>
       </article>
     </section>
