Updated Boxuan's photo

--- a/committee.html
+++ b/committee.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="brand">UIUC RNA Club</div>
+    <div class="brand">UIUC RNA Club <span class="dot" aria-hidden="true"></span></div>
     <nav class="nav">
       <select id="navSelect" data-current="committee.html" aria-label="Site navigation">
         <option value="index.html">Home</option>
@@ -26,7 +26,7 @@
     <!-- requirement #5 -->
     <section class="grid">
       <article class="card">
-        <img src="assets/hongjin.png" alt="Committee member photo" />
+        <img src="assets/hongjin.png" alt="Hong Jin" />
         <div class="card-body">
           <div class="name">Hong Jin</div>
           <div class="role">Associate Professor / Biochemistry</div>
@@ -34,7 +34,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/Kalsotra,Auinash.png" alt="Committee member photo" />
+        <img src="assets/Kalsotra,Auinash.png" alt="Nash Kalsotra" />
         <div class="card-body">
           <div class="name">Nash Kalsotra</div>
           <div class="role">Phillip A. Sharp Endowed Professor / Biochemistry</div>
@@ -42,15 +42,15 @@
       </article>
 
       <article class="card">
-        <img src="assets/YanZhang_photo.png" alt="Committee member photo" />
+        <img src="assets/YanZhang_photo.png" alt="Yan Zhang" />
         <div class="card-body">
           <div class="name">Yan Zhang</div>
           <div class="role">Assistant Professor / Biochemistry</div>
         </div>
       </article>
 
-      <article class="card"></article>
-        <img src="assets/Boxuan Zhao cropped.png" alt="Committee member photo" />
+      <article class="card">
+        <img src="assets/Boxuan Zhao cropped.png" alt="Boxuan Zhao" />
         <div class="card-body">
           <div class="name">Boxuan Zhao</div>
           <div class="role">Assistant Professor / Cell and Developmental Biology</div>
