Changed committee page appearance.

--- a/committee.html
+++ b/committee.html
@@ -53,7 +53,15 @@
         <img src="assets/Boxuan Zhao cropped.png" alt="Boxuan Zhao" />
         <div class="card-body">
           <div class="name">Boxuan Zhao</div>
-          <div class="role">Assistant Professor / Cell and Developmental Biology</div>
+          <div class="role">Assistant Professor / Cell & Developmental Biology</div>
+        </div>
+      </article>
+
+      <article class="card">
+        <img src="assets/KevinVanBortle.png" alt="Kevin Van Bortle" />
+        <div class="card-body">
+          <div class="name">Kevin Van Bortle</div>
+          <div class="role">Assistant Professor / Cell & Developmental Biology</div>
         </div>
       </article>
     </section>
