Updated event page.

--- a/committee.html
+++ b/committee.html
@@ -45,7 +45,7 @@
         <img src="assets/YanZhang_photo.png" alt="Yan Zhang" />
         <div class="card-body">
           <div class="name">Yan Zhang</div>
-          <div class="role">Assistant Professor / Biochemistry</div>
+          <div class="role">Assistant Professor / Microbiology</div>
         </div>
       </article>
 
@@ -62,6 +62,43 @@
         <div class="card-body">
           <div class="name">Kevin Van Bortle</div>
           <div class="role">Assistant Professor / Cell & Developmental Biology</div>
+        </div>
+      </article>
+    </section>
+
+    <h1>Student Committee</h1>
+
+    <section class="grid">
+      <!-- Duplicate this <article> block for each student member -->
+      <article class="card">
+        <img src="assets/student-placeholder.png" alt="Student committee member name" />
+        <div class="card-body">
+          <div class="name">Student Name</div>
+          <div class="role">Role / Program (e.g., PhD student, MCB)</div>
+        </div>
+      </article>
+
+      <article class="card">
+        <img src="assets/student-placeholder.png" alt="Student committee member name" />
+        <div class="card-body">
+          <div class="name">Student Name</div>
+          <div class="role">Role / Program</div>
+        </div>
+      </article>
+
+      <article class="card">
+        <img src="assets/student-placeholder.png" alt="Student committee member name" />
+        <div class="card-body">
+          <div class="name">Student Name</div>
+          <div class="role">Role / Program</div>
+        </div>
+      </article>
+
+      <article class="card">
+        <img src="assets/student-placeholder.png" alt="Student committee member name" />
+        <div class="card-body">
+          <div class="name">Student Name</div>
+          <div class="role">Role / Program</div>
         </div>
       </article>
     </section>
